[gd_scene load_steps=3 format=3 uid="uid://bsc22ah1vdmkk"]

[ext_resource type="FontFile" uid="uid://diiyvroyq1pc3" path="res://art/Lemon font/Lemon-Regular.ttf" id="1_5rgbb"]
[ext_resource type="Script" path="res://scenes/menu/Options_menu/slider_sound.gd" id="1_kq40v"]

[node name="slider_sound" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kq40v")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
theme_override_constants/separation = 42

[node name="Audio_name_lbl" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(600, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5rgbb")
theme_override_font_sizes/font_size = 50
text = "Master volume"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.005

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Audio_num_lbl" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5rgbb")
theme_override_font_sizes/font_size = 50
text = "100 %"

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
